ChangeLog for Gammu project <http://www.gammu.org/>
===================================================

Description
===========

In brackets names of people, who told about error/problem or helped in fixing
or inspired me to make it.

[!] Important change
[+] New functionality
[*] Changes in existing functionality
[-] Fixed error

ChangeLog
=========
    
2008???? - 1.21.95
    
20081210 - 1.21.94

[-] * Better skipping of currupted messages in AT (bug #768).
[-] * Autoload 6510 module if phone is S40 (bug #767).
[-] * Add ID for Nokia 6500s (bug #770).
[-] * Add automatic detection of Nokia phones (bug #770).
[-] * Catch error when calls can not be deleted (bug #738).
[-] * Better documentation of addnew (bug #734).
[-] * Fix detection of OBEX capability on older Siemens phones.
[-] * Try to detect wrongly formatted CMGL reply (bug #771);
[-] * Handle phones which fail to report supported charsets.
[-] * Fixed encoding of WAP indicator messages.
[+] * Support for photos in vCard (bug #227).
[!] * vC* saving now protects against buffer overflows.
    
20081202 - 1.21.93

[!] * Drop own crosscompilation support, rely on CMake one.
[!] * Also standard CMake parameters used when possible (eg.
      BUILD_SHARED_LIBS).
[-] * Search does not create thread for non existing devices.
[-] * Fixed possible crash when backing up ringtones.
[-] * Fix possible race condition in searching.
[-] * Fixed invoking of CMake with output to custom directory.
[-] * Compile on platforms where ssize_t does not exist.
[-] * Fix detection of towlower on some compilers.
[-] * Make Bluetooth compile using BCC.
[-] * Fix compilation if strtoull does not exist.
[-] * Compile on platforms where intptr_t does not exist.
[-] * Fixed compilation in BCC (see changes above).
[-] * Check whether compiler supports __FUNCTION__.

20081119 - 1.21.92

[-] * Reimplement locking and add tests for it.
[!] * GSM_SetDebugFileDescriptor now accepts flag whether file
      descriptor can be closed (bug #749).