@@ -1,0 +1,6 @@
+BEGIN:VCARD
+VERSION:2.1
+N: Nikdo;Nikdovic
+X-CALLER-GROUP:100
+X-PRIVATE:1
+END:VCARD
